--- a/_posts/2024-04-10-RuoYi_v4.7.8_RCE.md
+++ b/_posts/2024-04-10-RuoYi_v4.7.8_RCE.md
@@ -2,8 +2,8 @@
 title: RuoYi_v4.7.8_RCE
 date: 2024-04-10 18:53:00 +0800
 img_path: /
-categories: [肾透, 漏洞利用]
-tags: [肾透, 漏洞利用]     
+categories: [肾透, 代码审计]
+tags: [肾透, 代码审计]     
 
 ---
 
